--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_loader.scss
@@ -2,6 +2,8 @@
 
 @import "time-period";
 @import "course-periods";
+@import "course-status";
+@import "event-status";
 @import "class-packages";
 @import "single-class-groups";
 @import "price";
