--- a/docroot/themes/custom/site/src/styles/theme/entity/node/full/_long-course.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/full/_long-course.scss
@@ -10,8 +10,6 @@
 // Variables
 // --------------------------------------------------
 
-
-
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
@@ -28,9 +26,6 @@
     }
   }
 
-  .travel-class-container {
-    margin-bottom: 30px;
-  }
   .price-table {
     border: 1px solid #ddd;
     background: none;
@@ -48,11 +43,6 @@
   }
 }
 
-form.vih-subscription-long-course-order-form{
-  & article.user.compact{
-    margin-top: 120px;
-  }
-}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -62,95 +52,34 @@ form.vih-subscription-long-course-order-form{
 // --------------------------------------------------
 
 // Mobile - and up
-@media #{$breakpoint-mobile-and-up} {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+@media #{$breakpoint-mobile-and-up} {}
 
 // Mobile - only
-@media #{$breakpoint-mobile-only} {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+@media #{$breakpoint-mobile-only} {}
 
 // Tablet - and up
-@media #{$breakpoint-tablet-and-up} {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-    .region-content {
-      margin-top: 20px;
-    }
-    .field--name-field-vih-course-periods {
-      margin-bottom: 40px;
-      .field__items {
-        padding-top: 25px;
-        padding-bottom: 25px;
-      }
-
-    }
-  }
-}
+@media #{$breakpoint-tablet-and-up} {}
 
 // Tablet - only
-@media #{$breakpoint-tablet-only} {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+@media #{$breakpoint-tablet-only} {}
 
 // Desktop - and up
-@media #{$breakpoint-desktop-and-up} {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+@media #{$breakpoint-desktop-and-up} {}
 
 // Desktop - only
-@media #{$breakpoint-desktop-only} {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+@media #{$breakpoint-desktop-only} {}
 
 // Large desktop - and up
-@media #{$breakpoint-large-desktop-and-up} {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+@media #{$breakpoint-large-desktop-and-up} {}
 
 // Print
-@media print {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+@media print {}
 
 // Touch
-.touchevents {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+.touchevents {}
 
 // No touch
-.no-touchevents {
-
-  // Long Course Order
-  .path-node.page-node-type-vih-long-cource{
-  }
-}
+.no-touchevents {}
 
 // --------------------------------------------------
 // Mixins
