--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -14,6 +14,26 @@ view_mode ? view_mode|clean_class,
         <div class="sectioned__inner">
             <div class="container">
 
+                {# Begin - event status #}
+                {% if content.is_active %}
+
+                    {% if not content.can_be_subscribed %}
+                        <div class="boxy boxy--event-status">
+                            <div class="boxy__body">
+                                {{ 'No more available slots on this event' | trans }}
+                            </div>
+                        </div>
+                    {% endif %}
+
+                {% else %}
+                    <div class="boxy boxy--course-status">
+                        <div class="boxy__body">
+                            {{ 'This event has been cancelled' | trans }}
+                        </div>
+                    </div>
+                {% endif %}
+                {# End - event status #}
+
                 <div class="partial">
                     <div class="partial__body">
                         <div class="row">
@@ -93,36 +113,18 @@ view_mode ? view_mode|clean_class,
                     </div>
                 </div>
 
-                {% if content.isActive%}
-                  {% if(content.acceptsMoreSubscription) %}
-                    <!-- Begin - action button -->
+                {# Begin - action button #}
+                {% if content.is_active and content.can_be_subscribed %}
                     <div class="partial partial--action-button">
                         <div class="partial__body">
-                            <div class="text-center">
-                                <a href="{{ url('vih_subscription.event_order_create', {'event': node.id}) }}"
-                                   class="btn btn-primary">
-                                    {{ "Participate" | trans }}
-                                </a>
-                            </div>
+                            <a href="{{ url('vih_subscription.event_order_create', {'event': node.id}) }}"
+                               class="btn btn-primary">
+                                {{ "Start now" | trans }}
+                            </a>
                         </div>
                     </div>
-                    <!-- End - action button -->
-                  {% else %}
-                    <div class="partial partial--action-button">
-                      <div class="partial__body">
-                        {{ "No more available places" | trans }}
-                      </div>
-                    </div>
-                  {% endif %}
-                {% else %}
-                  <div class="partial partial--action-button">
-                    <div class="partial__body">
-                      {{ "This event is cancelled" | trans }}
-                    </div>
-                  </div>
                 {% endif %}
-
-
+                {# End - action button #}
 
                 {# Begin - teacher #}
                 {% if content.field_vih_cource_contact_person %}
