--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -14,13 +14,25 @@ view_mode ? view_mode|clean_class,
         <div class="sectioned__inner">
             <div class="container">
 
-                {{ title_prefix }}
-                {% if not page %}
-                    <h2{{ title_attributes }}>
-                        <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-                    </h2>
+                {# Begin - course status #}
+                {% if content.is_active %}
+
+                    {% if not content.can_be_subscribed %}
+                        <div class="boxy boxy--course-status">
+                            <div class="boxy__body">
+                                {{ 'No more available slots on this course' | trans }}
+                            </div>
+                        </div>
+                    {% endif %}
+
+                {% else %}
+                    <div class="boxy boxy--course-status">
+                        <div class="boxy__body">
+                            {{ 'This course has been cancelled' | trans }}
+                        </div>
+                    </div>
                 {% endif %}
-                {{ title_suffix }}
+                {# End - course status #}
 
                 <div class="partial">
                     <div class="partial__body">
@@ -106,34 +118,18 @@ view_mode ? view_mode|clean_class,
                     </div>
                 </div>
 
-                {% if content.isActive%}
-                  {% if(content.acceptsMoreSubscription) %}
-                    <!-- Begin - action button -->
+                {# Begin - action button #}
+                {% if content.is_active and content.can_be_subscribed %}
                     <div class="partial partial--action-button">
                         <div class="partial__body">
-                            <div class="text-center">
-                                <a href="{{ url('vih_subscription.short_course_order_create', {'course': node.id}) }}"
-                                   class="btn btn-primary">
-                                    {{ "Participate" | trans }}
-                                </a>
-                            </div>
+                            <a href="{{ url('vih_subscription.short_course_order_create', {'course': node.id}) }}"
+                               class="btn btn-primary">
+                                {{ "Join course" | trans }}
+                            </a>
                         </div>
                     </div>
-                    <!-- End - action button -->
-                  {% else %}
-                    <div class="partial partial--action-button">
-                      <div class="partial__body">
-                        {{ "No more available places" | trans }}
-                      </div>
-                    </div>
-                  {% endif %}
-                {% else %}
-                  <div class="partial partial--action-button">
-                    <div class="partial__body">
-                      {{ "This short course is cancelled" | trans }}
-                    </div>
-                  </div>
                 {% endif %}
+                {# End - action button #}
 
                 {# Begin - teacher #}
                 {% if content.field_vih_cs_contact_person %}
