--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
@@ -3,9 +3,9 @@
 @import "long-course-list";
 @import "class-groups-accordion";
 @import "video";
+@import "single-class-group";
 
 // Files below needs to be cleaned up
 @import "_paragraph-type-file";
 @import "_paragraph-type-teacher-class-description";
 @import "_paragraph-type-user-quote";
-@import "_paragraph-type-vih-single-class-group";
