--- a/docroot/themes/custom/site/templates/node/list-advanced/node--vih-long-cource--list-advanced.html.twig
+++ b/docroot/themes/custom/site/templates/node/list-advanced/node--vih-long-cource--list-advanced.html.twig
@@ -11,23 +11,21 @@ set classes = [
 
 <a href="{{ url }}" class="element-wrapper-link entity-list-advanced entity-list-advanced--long-course">
 
-    <!-- Begin - image -->
-    <div class="entity-list-advanced__image">
+    {# Begin - image #}
+    {% if node.field_vih_course_image.value %}
+        <div class="entity-list-advanced__image" style="background-image: url({{ node.field_vih_course_image.entity.fileuri | image_style(content.field_vih_course_image[0]['#image_style']) }});">
 
-        {# Begin - image #}
-        {{ content.field_vih_sc_image }}
-        {# End - image #}
+            {# Begin - period #}
+            {% if content.course_period_start and content.course_period_end %}
+                <div class="entity-list-advanced__image__overlay">
+                    {{ content.course_period_start | format_date('vih_medium_date_short_month') }} - {{ content.course_period_end | format_date('vih_medium_date_short_month') }}
+                </div>
+            {% endif %}
+            {# End - period #}
 
-        {# Begin - period #}
-        {% if content.course_period_start and content.course_period_end %}
-            <div class="entity-list-advanced__image__overlay">
-                {{ content.course_period_start | format_date('vih_medium_date_short_month') }} - {{ content.course_period_end | format_date('vih_medium_date_short_month') }}
-            </div>
-        {% endif %}
-        {# End - period #}
-
-    </div>
-    <!-- End - image -->
+        </div>
+    {% endif %}
+    {# End - image #}
 
     <!-- Begin - body -->
     <div class="entity-list-advanced__body">
