--- a/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-single-class-group.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-single-class-group.html.twig
@@ -5,40 +5,45 @@ set classes = [
 view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
+{% set accordion_random_id = random() %}
+
 <div{{ attributes.addClass(classes) }}>
 
-    {% set accordion_random_id = random() %}
+    <div class="partial partial--single-class-groups">
+        <div class="partial__body">
 
-    <!-- Begin - panel -->
-<div class="panel panel-default">
+            <!-- Begin - panel -->
+            <div class="panel panel-default">
 
-        <!-- Begin - heading -->
-        <div class="panel-heading" id="heading-{{ accordion_random_id }}">
-            <h4 class="panel-title heading-h5">
-                <a role="button" data-toggle="collapse"
-                   data-parent="#accordion"
-                   href="#collapse-{{ accordion_random_id }}"
-                   aria-expanded="true"
-                   aria-controls="collapse-{{ accordion_random_id }}">
+                <!-- Begin - heading -->
+                <div class="panel-heading" id="heading-{{ accordion_random_id }}">
+                    <h4 class="panel-title heading-h5">
+                        <a role="button" data-toggle="collapse"
+                           href="#collapse-{{ accordion_random_id }}"
+                           aria-expanded="true"
+                           aria-controls="collapse-{{ accordion_random_id }}">
 
-                    {{ content.field_vih_scg_group_title }}
-                </a>
-            </h4>
-        </div>
-        <!-- End - heading -->
+                            {{ content.field_vih_scg_group_title }}
+                        </a>
+                    </h4>
+                </div>
+                <!-- End - heading -->
 
-        <!-- Begin - body -->
-        <div id="collapse-{{ accordion_random_id }}"
-             class="panel-collapse collapse" role="tabpanel"
-             aria-labelledby="heading-{{ accordion_random_id }}">
+                <!-- Begin - body -->
+                <div id="collapse-{{ accordion_random_id }}"
+                     class="panel-collapse collapse" role="tabpanel"
+                     aria-labelledby="heading-{{ accordion_random_id }}">
 
-            <div class="panel-body">
-                {{ content.field_vih_scg_classes }}
+                    <div class="panel-body">
+                        {{ content.field_vih_scg_classes }}
+                    </div>
+                </div>
+                <!-- End - body -->
+
             </div>
-        </div>
-        <!-- End - body -->
+            <!-- End - panel -->
 
+        </div>
     </div>
-    <!-- End - panel -->
 
 </div>
