--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -28,7 +28,11 @@ view_mode ? view_mode|clean_class,
                 {% else %}
                     <div class="boxy boxy--course-status">
                         <div class="boxy__body">
-                            {{ 'This course has been cancelled' | trans }}
+                            {% if content.is_closed %}
+                                {{ 'This course is closed for signups.' | trans }}
+                            {% else %}
+                                {{ 'This course has been cancelled' | trans }}
+                            {% endif %}
                         </div>
                     </div>
                 {% endif %}
@@ -146,7 +150,7 @@ view_mode ? view_mode|clean_class,
                                                             <a role="button" data-toggle="collapse"
                                                                data-parent="#accordion"
                                                                href="#collapse-{{ class_package_id }}"
-                                                               aria-expanded="true"
+                                                               aria-expanded="false"
                                                                aria-controls="collapse-{{ class_package_id }}">
                                                                 {{ class_package.name }}
                                                             </a>
