--- a/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-single-class-group.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-single-class-group.html.twig
@@ -31,7 +31,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 
                 <!-- Begin - body -->
                 <div id="collapse-{{ accordion_random_id }}"
-                     class="panel-collapse collapse" role="tabpanel"
+                     class="panel-collapse collapse in" role="tabpanel"
                      aria-labelledby="heading-{{ accordion_random_id }}">
 
                     <div class="panel-body">
