--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_course-periods.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_course-periods.scss
@@ -25,6 +25,10 @@
   .boxy__body {
     padding: 0;
   }
+
+  .panel-body {
+    padding: 0;
+  }
 }
 
 // --------------------------------------------------
