--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
@@ -1,45 +1,48 @@
 <div class="all-classes-container">
 
     {% for delta, radio in radios['#options'] %}
-    <div class="class-selection">
-        {{ radios['#classes']['radio_selection'][delta] }}
+        <div {{ attributes.addClass('entity-list-advanced', 'entity-list-advanced--class') }}>
+            {{ radios['#classes']['radio_selection'][delta] }}
 
-        <label class="btn btn-default btn-radio-select">
-            {{ radios[delta] }}
-        </label>
+            <!-- Begin - action -->
+            <div class="entity-list-advanced__action">
 
-        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#class-modal-{{ radios[delta]['#id'] }}">
-            <i class="icon icon-info-circle" aria-hidden="true"></i>
-        </button>
+                <label class="btn btn-default btn-radio-select">
+                    {{ radios[delta] }}
+                </label>
 
-        {# Begin - modal #}
-        <div class="modal fade" id="class-modal-{{ radios[delta]['#id'] }}" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header" style="background-image: url('{{ file_url(radios['#classes']['radio_selection'][delta]['#taxonomy_term'].field_vih_class_image.entity.fileuri) }}');">
-                        <div class="modal-header-close">
-                            <button type="button" class="close" data-dismiss="modal">×</button>
+                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#class-modal-{{ radios[delta]['#id'] }}">
+                    <i class="icon icon-info-circle" aria-hidden="true"></i>
+                </button>
+
+            </div>
+            <!-- End - action -->
+
+            {# Begin - modal #}
+            <div class="modal fade" id="class-modal-{{ radios[delta]['#id'] }}" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header" style="background-image: url('{{ file_url(radios['#classes']['radio_selection'][delta]['#taxonomy_term'].field_vih_class_image.entity.fileuri) }}');">
+                            <div class="modal-header-close">
+                                <button type="button" class="close" data-dismiss="modal">×</button>
+                            </div>
+
+                            <div class="modal-header-title">
+                                <h4 class="modal-title">{{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getName }}</h4>
+                            </div>
+
+                            <div class="diagonal-end"></div>
                         </div>
 
-                        <div class="modal-header-title">
-                            <h4 class="modal-title">{{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getName }}</h4>
+                        <div class="modal-body">
+                            {{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getDescription|raw }}
                         </div>
-
-                        <div class="diagonal-end"></div>
-                    </div>
-
-                    <div class="modal-body">
-                        {{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getDescription|raw }}
                     </div>
                 </div>
             </div>
-        </div>
-        {# End - modal #}
+            {# End - modal #}
 
-    </div>
-    </div>
-    </div>
-    </div>
+        </div>
     {% endfor %}
 
 </div>
