--- a/docroot/themes/custom/site/templates/_partials/footer.html.twig
+++ b/docroot/themes/custom/site/templates/_partials/footer.html.twig
@@ -47,7 +47,7 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-8">
                             <div class="layout__footer-bottom-copyright">
-                                <p>{% trans %} © {{ theme_settings['copyright_interval'] }}, Vejle Idrætshøjskole. All rights reserved.{% endtrans %}</p>
+                                <p>{{ '© 2011-2017, Vejle Idrætshøjskole. All rights reserved' | trans }}</p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-4">
