--- a/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
@@ -1,4 +1,4 @@
-<div class="sectioned sectioned--banner sectioned--banner sectioned--background-image" style="background-image: url({{ content.field_image[0]['#markup'] }})">
+<div class="banner" style="background-image: url({{ content.field_image[0]['#markup'] }})">
 
     <!-- Begin - logo -->
     <div class="banner__logo">
@@ -10,12 +10,12 @@
     </div>
     <!-- End - logo -->
 
-    <div class="sectioned__inner">
+    <div class="banner__inner">
         <div class="container">
 
             <!-- Begin - heading -->
-            <div class="sectioned__heading">
-                <h1 class="sectioned__heading__title">{{ content.field_image['#items'].alt }}</h1>
+            <div class="banner__heading">
+                <h1 class="banner__heading__title">{{ content.field_image['#items'].alt }}</h1>
             </div>
             <!-- End - heading -->
 
