--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -42,15 +42,15 @@
                     {% endif %}
                     {# End - image #}
 
-                    <div class="sectioned sectioned--banner sectioned--banner--small sectioned--background-image" style="background-image: url({{ banner_background_image }})">
-                        <div class="sectioned__inner">
+                    <div class="banner banner--small" style="background-image: url({{ banner_background_image }})">
+                        <div class="banner__inner">
                             <div class="container">
-                                <div class="sectioned__heading">
+                                <div class="banner__heading">
 
                                     {% if node.title.value %}
-                                        <h1 class="sectioned__heading__title">{{ node.title.value }}</h1>
+                                        <h1 class="banner__heading__title">{{ node.title.value }}</h1>
                                     {% elseif page['#title'] %}
-                                        <h1 class="sectioned__heading__title">{{ page['#title'] }}</h1>
+                                        <h1 class="banner__heading__title">{{ page['#title'] }}</h1>
                                     {% endif %}
 
                                 </div>
